--- a/css/index.css
+++ b/css/index.css
@@ -2,8 +2,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+    font-family: "League Spartan", sans-serif;
+    font-weight: 600;
 }
+
+
 
 nav {
     display: flex;
@@ -11,7 +14,7 @@ nav {
     position: fixed;
     top: 0;
     width: 100%;
-    border-bottom: 2px solid #969bff;
+
     padding: 10px 20px;
     box-sizing: border-box;
     z-index: 1000;
@@ -20,15 +23,14 @@ nav {
 }
 
 nav>a>img {
-    width: 65px;
+    width: 300px;
     height: auto;
 }
 
 .menu {
     text-decoration: none;
-    color: #5d534d;
+    color: #ffd00e;
     font-size: 1.2em;
     padding: 5px 10px;
 
 }
-
