--- a/css/index.css
+++ b/css/index.css
@@ -7,19 +7,18 @@
 }
 
 
-
 nav {
     display: flex;
     background-color: white;
     position: fixed;
     top: 0;
     width: 100%;
-
     padding: 10px 20px;
     box-sizing: border-box;
     z-index: 1000;
     align-items: center;
     justify-content: space-around;
+    border-bottom: #3B82F6 1px solid;
 }
 
 nav>a>img {
@@ -27,10 +26,22 @@ nav>a>img {
     height: auto;
 }
 
+
+
 .menu {
     text-decoration: none;
     color: #ffd00e;
-    font-size: 1.2em;
+    font-size: 1.4em;
     padding: 5px 10px;
+
+}
+
+.tema:hover {
+    color: #3B82F6;
+}
+
+.banner>img {
+    width: 100%;
+    margin-top: 25px;
 
 }
